--- a/src/components/WhyChooseUsTabs.astro
+++ b/src/components/WhyChooseUsTabs.astro
@@ -66,7 +66,7 @@
         />
         <div
           id="dashboardOverlay"
-          class="absolute inset-x-0 bottom-0 flex items-center justify-center bg-primary bg-opacity-100 rounded-b-lg p-4"
+          class="min-h-40 absolute inset-x-0 bottom-0 flex items-center justify-center bg-primary bg-opacity-100 rounded-b-lg p-4"
         >
           <p
             id="dashboardText"
