--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
 <html
   lang="en"
   class="h-full scroll-smooth bg-white antialiased"
-  data-theme="cupcake"
+  data-theme="chsafeguarding"
 >
   <head>
     <meta charset="UTF-8" />
@@ -39,7 +39,7 @@ const { title } = Astro.props;
     );
   }
   html {
-    font-family: system-ui, sans-serif;
+    font-family: proxima-nova, sans-serif;
     background: #13151a;
   }
   code {
