--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,16 +10,87 @@ import Experts from "../components/Experts.astro";
   >
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between items-center h-16">
-        <div class="flex flex-row gap-2 justify-between items-center">
+        <!-- Mobile menu button -->
+        <button id="mobile-menu-button" class="md:hidden">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-6 h-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"></path>
+          </svg>
+        </button>
+
+        <!-- Logo and company name -->
+        <div
+          class="flex flex-row gap-2 justify-center items-center md:justify-start flex-grow md:flex-grow-0"
+        >
           <img src="/images/chlogo.png" alt="Company Logo" class="h-12" />
           <span class="text-xl font-bold">C&H Safeguarding</span>
         </div>
-        <div>
-          <button class="btn btn-primary w-40"> Sign in </button>
+
+        <!-- Desktop menu items -->
+        <div class="hidden md:flex items-center space-x-4">
+          <a href="#" class="text-gray-800 hover:text-gray-600">Home</a>
+          <a href="#" class="text-gray-800 hover:text-gray-600">Services</a>
+          <a href="#" class="text-gray-800 hover:text-gray-600">About</a>
+          <a href="#" class="text-gray-800 hover:text-gray-600">Contact</a>
+        </div>
+
+        <!-- Sign in button -->
+        <div class="hidden md:block">
+          <button class="btn btn-outline btn-primary w-40"> Sign in </button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Mobile menu (hidden by default) -->
+    <div
+      id="mobile-menu"
+      class="hidden md:hidden bg-white w-full absolute left-0 top-full transition-all duration-300 ease-in-out"
+    >
+      <div class="px-2 pt-2 pb-3 space-y-1">
+        <a
+          href="#"
+          class="block px-3 py-2 border-l-4 border-secondary rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
+          >Home</a
+        >
+        <a2
+          href="#"
+          class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
+          >Services</a2
+        >
+        <a
+          href="#"
+          class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
+          >About</a
+        >
+        <a
+          href="#"
+          class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
+          >Contact</a
+        >
+        <div class="px-3 py-2">
+          <a class="btn btn-outline w-full"> Sign in </a>
         </div>
       </div>
     </div>
   </nav>
+
+  <script>
+    const mobileMenuButton = document.getElementById("mobile-menu-button");
+    const mobileMenu = document.getElementById("mobile-menu");
+
+    mobileMenuButton.addEventListener("click", () => {
+      mobileMenu.classList.toggle("hidden");
+    });
+  </script>
   <section
     class="min-h-screen mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 pb-16 pt-20 text-center lg:pt-32"
   >
@@ -40,7 +111,7 @@ import Experts from "../components/Experts.astro";
         et dolore magna aliqua.
       </p>
       <div class="mt-10 flex-col flex md:flex-row justify-center gap-4">
-        <a href="#" class="btn btn-primary lg:btn-lg">
+        <a href="#" class="btn btn-primary btn-lg">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             class="h-8 w-8 inline-block mr-2"
@@ -60,7 +131,7 @@ import Experts from "../components/Experts.astro";
           </svg>
           Speak to an expert
         </a>
-        <a href="#" class="btn lg:btn-lg">
+        <a href="#" class="btn btn-lg">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             class="h-8 w-8 inline-block mr-2"
@@ -81,7 +152,7 @@ import Experts from "../components/Experts.astro";
     class="w-full min-h-screen py-16 px-4 sm:px-6 lg:px-8 bg-secondary -mt-20"
   >
     <h2
-      class="text-5xl sm:text-6xl md:text-7xl font-black text-center text-white mb-12 pt-20"
+      class="text-2xl sm:text-6xl md:text-7xl font-black text-center text-white mb-12 pt-20"
     >
       Why Choose C&H Safeguarding?
     </h2>
@@ -90,7 +161,7 @@ import Experts from "../components/Experts.astro";
   <section class="bg-gray-100 py-16">
     <div class="container mx-auto px-4">
       <h2 class="text-5xl font-bold text-center text-primary-600 mb-4">
-        Our Services
+        What we offer
       </h2>
       <p class="text-xl text-center text-gray-600 mb-12 max-w-3xl mx-auto">
         We offer a comprehensive range of safeguarding services tailored to meet
@@ -226,6 +297,107 @@ import Experts from "../components/Experts.astro";
       <Experts />
     </div>
   </section>
+
+  <footer class="bg-gray-100 py-12">
+    <div class="container mx-auto px-4">
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8 w-full justify-between">
+        <div>
+          <h3 class="text-lg font-semibold mb-4">C&H Safeguarding</h3>
+          <p class="text-sm text-gray-600 mb-4">
+            &copy; 2023 C&H Safeguarding. All rights reserved.
+          </p>
+          <p class="text-sm text-gray-600">
+            C&H Safeguarding is a trademark of C&H Safeguarding Ltd.
+          </p>
+        </div>
+        <div class="md:justify-self-center">
+          <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
+          <ul class="space-y-2">
+            <li>
+              <a
+                href="/contact-us"
+                class="text-sm text-gray-600 hover:text-primary">Contact Us</a
+              >
+            </li>
+            <li>
+              <a href="/terms" class="text-sm text-gray-600 hover:text-primary"
+                >Terms and Conditions</a
+              >
+            </li>
+            <li>
+              <a
+                href="/privacy"
+                class="text-sm text-gray-600 hover:text-primary"
+                >Privacy Policy</a
+              >
+            </li>
+            <li>
+              <a
+                href="/sitemap"
+                class="text-sm text-gray-600 hover:text-primary">Sitemap</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="md:justify-self-end">
+          <h3 class="text-lg font-semibold mb-4">Connect With Us</h3>
+          <div class="flex space-x-4">
+            <a href="#" class="text-gray-600 hover:text-primary">
+              <svg
+                class="w-6 h-6"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+                aria-hidden="true"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"
+                  clip-rule="evenodd"></path>
+              </svg>
+            </a>
+            <a href="#" class="text-gray-600 hover:text-primary">
+              <svg
+                class="w-6 h-6"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+                aria-hidden="true"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z"
+                  clip-rule="evenodd"></path>
+              </svg>
+            </a>
+            <a href="#" class="text-gray-600 hover:text-primary">
+              <svg
+                class="w-6 h-6"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+                aria-hidden="true"
+              >
+                <path
+                  d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84"
+                ></path>
+              </svg>
+            </a>
+            <a href="#" class="text-gray-600 hover:text-primary">
+              <svg
+                class="w-6 h-6"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+                aria-hidden="true"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z"
+                  clip-rule="evenodd"></path>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script>
     function toggleBio(id) {
