--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import { clsx } from "clsx";
+import Navigation from "../components/Navigation.astro";
 
 interface Props {
   title: string;
@@ -23,6 +23,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+    <Navigation />
     <slot />
   </body>
 </html>
