--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,10 +21,9 @@ import Navigation from "../components/Navigation.astro";
         </span>
       </h1>
       <p
-        class="mt-3 max-w-md mx-auto text-base text-gray-500 sm:text-lg md:mt-5 md:text-xl md:max-w-3xl"
+        class="mt-3 max-w-md mx-auto text-base text-gray-500 sm:text-lg md:mt-5 md:text-2xl md:max-w-3xl"
       >
-        Consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore
-        et dolore magna aliqua.
+        Empowering safer communities with inclusive solutions
       </p>
       <div class="mt-10 flex-col flex md:flex-row justify-center gap-4">
         <a href="#" class="btn btn-primary btn-lg">
