--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import Navigation from "../components/Navigation.astro";
       <p
         class="mt-3 max-w-md mx-auto text-base text-gray-500 sm:text-lg md:mt-5 md:text-2xl md:max-w-3xl"
       >
-        Empowering safer communities with inclusive solutions
+        Protecting people, empowering change
       </p>
       <div class="mt-10 flex-col flex md:flex-row justify-center gap-4">
         <a href="#" class="btn btn-primary btn-lg">
