Elevated the footer to the layout and updated the service page template.

--- a/src/pages/safeguarding-consultancy.astro
+++ b/src/pages/safeguarding-consultancy.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Safeguarding Consultancy | C&H Safeguarding">
-  <div class="mx-auto px-4 py-16 pt-36">
+  <div class="mx-auto px-4 pt-36">
     <div class="flex flex-col md:flex-row">
       <div class="md:w-1/2 md:pr-8">
         <img
@@ -66,11 +66,31 @@ import Layout from "../layouts/Layout.astro";
             >
           </li>
         </ul>
-        <p class="md:pl-8 text-lg">
+        <p class="md:pl-8 text-lg mb-10">
           This tailored approach ensures that your organisation's safeguarding
           practices are robust, effective, and compliant with all relevant
           regulations.
         </p>
+        <a
+          href="#"
+          class="md:hidden btn btn-primary flex btn-lg items-center justify-center w-full"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6 mr-2"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"
+            ></path>
+          </svg>
+          Speak to one of our team
+        </a>
       </div>
       <div class="hidden md:block md:w-1/2">
         <img
@@ -78,6 +98,26 @@ import Layout from "../layouts/Layout.astro";
           alt="Safeguarding Consultancy"
           class="rounded-lg shadow-lg mb-8"
         />
+        <a
+          href="#"
+          class="hidden btn btn-primary md:flex btn-lg items-center justify-center w-full"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6 mr-2"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"
+            ></path>
+          </svg>
+          Speak to one of our team
+        </a>
       </div>
     </div>
   </div>
