--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,9 +6,8 @@ import Navigation from "../components/Navigation.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-  <Navigation />
   <section
-    class="min-h-screen mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 pb-16 pt-20 text-center lg:pt-32"
+    class="container min-h-screen mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 pb-16 pt-20 text-center lg:pt-32"
   >
     <div class="text-center">
       <h1
