--- a/src/pages/safeguarding-consultancy.astro
+++ b/src/pages/safeguarding-consultancy.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Safeguarding Consultancy | C&H Safeguarding">
-  <div class="mx-auto px-4 pt-36">
+  <div class="container mx-auto px-4 pt-36">
     <div class="flex flex-col md:flex-row">
       <div class="md:w-1/2 md:pr-8">
         <img
@@ -92,7 +92,7 @@ import Layout from "../layouts/Layout.astro";
           Speak to one of our team
         </a>
       </div>
-      <div class="hidden md:block md:w-1/2">
+      <div class="hidden md:block md:w-1/3">
         <img
           src="https://placehold.co/600x400"
           alt="Safeguarding Consultancy"
@@ -100,7 +100,7 @@ import Layout from "../layouts/Layout.astro";
         />
         <a
           href="#"
-          class="hidden btn btn-primary md:flex btn-lg items-center justify-center w-full"
+          class="hidden btn btn-primary md:flex btn-lg items-center justify-center btn-block"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -116,7 +116,7 @@ import Layout from "../layouts/Layout.astro";
               d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"
             ></path>
           </svg>
-          Speak to one of our team
+          Speak to one of our sdfdsf
         </a>
       </div>
     </div>
