--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -34,10 +34,16 @@
 
       <!-- Desktop menu items -->
       <div class="hidden md:flex items-center space-x-4">
-        <a href="#" class="text-gray-800 hover:text-gray-600">Home</a>
-        <a href="#" class="text-gray-800 hover:text-gray-600">Services</a>
-        <a href="#" class="text-gray-800 hover:text-gray-600">About</a>
-        <a href="#" class="text-gray-800 hover:text-gray-600">Contact</a>
+        <a href="/" class="text-gray-800 hover:text-gray-600">Home</a>
+        <a href="#why-choose-us" class="text-gray-800 hover:text-gray-600"
+          >Why Choose Us</a
+        >
+        <a href="#what-we-offer" class="text-gray-800 hover:text-gray-600"
+          >What We Offer</a
+        >
+        <a href="#experts" class="text-gray-800 hover:text-gray-600"
+          >Our Experts</a
+        >
       </div>
 
       <!-- Sign in button -->
@@ -59,19 +65,19 @@
         >Home</a
       >
       <a2
-        href="#"
+        href="#why-choose-us"
         class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
-        >Services</a2
+        >Why Choose Us</a2
       >
       <a
-        href="#"
+        href="#what-we-offer"
         class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
-        >About</a
+        >What We Offer</a
       >
       <a
-        href="#"
+        href="#experts"
         class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
-        >Contact</a
+        >Our Experts</a
       >
       <div class="px-3 py-2">
         <a class="btn btn-outline w-full"> Sign in </a>
