--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,6 +63,7 @@ import Navigation from "../components/Navigation.astro";
     </div>
   </section>
   <section
+    id="why-choose-us"
     class="w-full min-h-screen py-16 px-4 sm:px-6 lg:px-8 bg-secondary -mt-20"
   >
     <h2
@@ -72,7 +73,7 @@ import Navigation from "../components/Navigation.astro";
     </h2>
     <WhyChooseUsTabs />
   </section>
-  <section class="bg-gray-100 py-16">
+  <section id="what-we-offer" class="bg-gray-100 py-16">
     <div class="container mx-auto px-4">
       <h2 class="text-5xl font-bold text-center text-primary-600 mb-4">
         What we offer
@@ -203,7 +204,7 @@ import Navigation from "../components/Navigation.astro";
       </div>
     </div>
   </section>
-  <section class="min-h-screen bg-white py-16">
+  <section id="experts" class="min-h-screen bg-white py-16">
     <div class="container mx-auto px-4">
       <h2 class="text-5xl font-bold text-center text-primary-600 mb-12">
         Let our experts guide you.
