Capitalisation of various headings.

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -48,7 +48,7 @@
 
       <!-- Sign in button -->
       <div class="hidden md:block">
-        <button class="btn btn-outline btn-primary w-40"> Sign in </button>
+        <button class="btn btn-outline btn-primary w-40"> Client Login </button>
       </div>
     </div>
   </div>
@@ -80,7 +80,9 @@
         >Our Experts</a
       >
       <div class="px-3 py-2">
-        <a class="btn btn-outline w-full"> Sign in </a>
+        <a href="/client-login" class="btn btn-outline w-full">
+          Client Login
+        </a>
       </div>
     </div>
   </div>
