--- a/src/components/WhyChooseUsTabs.astro
+++ b/src/components/WhyChooseUsTabs.astro
@@ -35,7 +35,7 @@
             <button
               class="font-display text-lg ui-not-focus-visible:outline-none text-blue-600 lg:text-white"
             >
-              <span>Best practice and compliance</span>
+              <span>Best Practice and Compliance</span>
             </button>
           </h3>
         </li>
@@ -47,7 +47,7 @@
             <button
               class="font-display text-lg ui-not-focus-visible:outline-none text-blue-600 lg:text-white"
             >
-              <span>Support and guidance</span>
+              <span>Support and Guidance</span>
             </button>
           </h3>
         </li>
