--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,6 @@
 import Layout from "../layouts/Layout.astro";
 import WhyChooseUsTabs from "../components/WhyChooseUsTabs.astro";
 import Experts from "../components/Experts.astro";
-import Navigation from "../components/Navigation.astro";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -76,7 +75,7 @@ import Navigation from "../components/Navigation.astro";
   <section id="what-we-offer" class="bg-gray-100 py-16">
     <div class="container mx-auto px-4">
       <h2 class="text-5xl font-bold text-center text-primary-600 mb-4">
-        What we offer
+        What We Offer
       </h2>
       <p class="text-xl text-center text-gray-600 mb-12 max-w-3xl mx-auto">
         We offer a comprehensive range of safeguarding services tailored to meet
@@ -207,7 +206,7 @@ import Navigation from "../components/Navigation.astro";
   <section id="experts" class="min-h-screen bg-white py-16">
     <div class="container mx-auto px-4">
       <h2 class="text-5xl font-bold text-center text-primary-600 mb-12">
-        Let our experts guide you.
+        Let Our Experts Guide You
       </h2>
       <Experts />
     </div>
