Adding trust to partnership.

--- a/src/components/WhyChooseUsTabs.astro
+++ b/src/components/WhyChooseUsTabs.astro
@@ -63,18 +63,6 @@
             </button>
           </h3>
         </li>
-        <li
-          class="cursor-pointer group relative rounded-full px-4 py-1 lg:rounded-l-xl lg:rounded-r-none lg:p-6 hover:bg-white/10 lg:hover:bg-white/10 min-h-[100px] flex items-center justify-center"
-          data-tab="trust"
-        >
-          <h3>
-            <button
-              class="font-display text-lg ui-not-focus-visible:outline-none text-blue-600 lg:text-white"
-            >
-              <span>Trust</span>
-            </button>
-          </h3>
-        </li>
       </ul>
     </div>
     <div class="w-full md:w-3/4">
@@ -130,11 +118,7 @@
         },
         partnerships: {
           image: "https://placehold.co/900x500",
-          text: "We work closely with partner organisations across the sector, providing the insights and guidance necessary to protect those at risk and promote a safe, caring environment.",
-        },
-        trust: {
-          image: "https://placehold.co/900x500",
-          text: "Your trust is our priority, and our mission is to help you achieve the highest standards of safeguarding excellence. ",
+          text: "We work closely with partner organisations across the sector, providing the insights and guidance necessary to protect those at risk and promote a safe, caring environment. Your trust is our priority, and our mission is to help you achieve the highest standards of safeguarding excellence.",
         },
       };
 
