Some US to UK localisation changes.

--- a/src/pages/safeguarding-consultancy.astro
+++ b/src/pages/safeguarding-consultancy.astro
@@ -15,7 +15,7 @@ import Layout from "../layouts/Layout.astro";
           Safeguarding Consultancy
         </h1>
         <h2 class="text-xl md:text-2xl text-center font-bold mt-2 mb-8">
-          Tailored Solutions for Your Organization
+          Tailored Solutions for Your Organisation
         </h2>
         <p class="md:pl-8 text-lg mb-6">
           Safeguarding consultancy is a customised service designed to address
