--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,11 +23,11 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <>
+  <body>
     <Navigation />
     <slot />
     <Footer />
-  </>
+  </body>
 
   <style is:global>
     :root {
@@ -57,5 +57,4 @@ const { title } = Astro.props;
         monospace;
     }
   </style>
-
 </html>
