--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,13 +15,14 @@ import Experts from "../components/Experts.astro";
         <span
           class="bg-clip-text text-transparent bg-gradient-to-r from-primary to-primary"
         >
-          Leaders in Safeguarding in Health and Social Care
+          Leaders in Safeguarding across organisations
         </span>
       </h1>
       <p
         class="mt-3 max-w-md mx-auto text-base text-gray-500 sm:text-lg md:mt-5 md:text-2xl md:max-w-3xl"
       >
-        Protecting People, Empowering Change
+        Committed to Protecting Vulnerable Individuals and Upholding Safety
+        Standards in Every Organisation We Serve
       </p>
       <div class="mt-10 flex-col flex md:flex-row justify-center gap-4">
         <a href="#" class="btn btn-primary btn-lg">
@@ -79,7 +80,7 @@ import Experts from "../components/Experts.astro";
       </h2>
       <p class="text-xl text-center text-gray-600 mb-12 max-w-3xl mx-auto">
         We offer a comprehensive range of safeguarding services tailored to meet
-        the unique needs of health and social care environments.
+        the unique needs of every organisation we serve.
       </p>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
         <div
