--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Experts from "../components/Experts.astro";
         <span
           class="bg-clip-text text-transparent bg-gradient-to-r from-primary to-primary"
         >
-          Leaders in Safeguarding across organisations
+          Leaders in Safeguarding Across Organisations
         </span>
       </h1>
       <p
