Adding loging page scaffolding.

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -48,7 +48,9 @@
 
       <!-- Sign in button -->
       <div class="hidden md:block">
-        <button class="btn btn-outline btn-primary w-40"> Client Login </button>
+        <a href="/login" class="btn btn-outline btn-primary w-40">
+          Client Login
+        </a>
       </div>
     </div>
   </div>
