--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -2,136 +2,65 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Login - C&H Safeguarding">
-  <div
-    class="min-h-screen flex items-center justify-center bg-gray-100 py-12 px-4 sm:px-6 lg:px-8"
-  >
-    <div class="max-w-md w-full space-y-8 bg-white p-10 rounded-xl shadow-md">
-      <div>
-        <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
-          Login to your account
-        </h2>
-      </div>
-      <form class="mt-8 space-y-6" action="#" method="POST">
-        <input type="hidden" name="remember" value="true" />
-        <div class="rounded-md shadow-sm -space-y-px">
-          <div>
-            <label for="email-address" class="sr-only">Email address</label>
-            <input
-              id="email-address"
-              name="email"
-              type="email"
-              autocomplete="email"
-              required
-              class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-primary focus:border-primary focus:z-10 sm:text-sm"
-              placeholder="Email address"
-            />
-          </div>
-          <div>
-            <label for="password" class="sr-only">Password</label>
-            <input
-              id="password"
-              name="password"
-              type="password"
-              autocomplete="current-password"
-              required
-              class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-primary focus:border-primary focus:z-10 sm:text-sm"
-              placeholder="Password"
-            />
-          </div>
+<Layout title="Login | C&H Safeguarding">
+  <div class="min-h-screen flex flex-col items-center bg-white">
+    <div
+      class="w-full sm:max-w-md mt-48 px-6 py-4 bg-white sm:shadow-md overflow-hidden sm:rounded-lg"
+    >
+      <form method="POST" action="/login">
+        <div>
+          <label class="block font-medium text-sm text-gray-700" for="email">
+            Email
+          </label>
+          <input
+            type="email"
+            class="input input-bordered block mt-1 w-full"
+            id="email"
+            name="email"
+            required
+            autofocus
+            autocomplete="username"
+          />
         </div>
 
-        <div class="flex items-center justify-between">
-          <div class="flex items-center">
-            <input
-              id="remember-me"
-              name="remember-me"
-              type="checkbox"
-              class="h-4 w-4 text-primary focus:ring-primary border-gray-300 rounded"
-            />
-            <label for="remember-me" class="ml-2 block text-sm text-gray-900">
-              Remember me
-            </label>
-          </div>
+        <div class="mt-4">
+          <label class="block font-medium text-sm text-gray-700" for="password">
+            Password
+          </label>
+          <input
+            type="password"
+            class="input input-bordered block mt-1 w-full"
+            id="password"
+            name="password"
+            required
+            autocomplete="current-password"
+          />
+        </div>
 
-          <div class="text-sm">
+        <div class="block mt-4 flex">
+          <label for="remember_me" class="flex items-center flex-1">
+            <input
+              type="checkbox"
+              class="checkbox"
+              id="remember_me"
+              name="remember"
+            />
+            <span class="ms-2 text-sm text-gray-600">Remember me</span>
+          </label>
+          <div>
             <a
-              href="#"
-              class="font-medium text-primary hover:text-primary-dark"
+              class="text-sm text-primary hover:text-primary-focus"
+              href="/forgot-password"
             >
               Forgot your password?
             </a>
           </div>
         </div>
 
-        <div>
-          <button
-            type="submit"
-            class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-primary hover:bg-primary-dark focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary"
-          >
-            Sign in
-          </button>
+        <div class="flex items-center justify-end mt-4">
+          <button class="btn btn-primary btn-block text-white"> Log in </button>
         </div>
       </form>
-
-      <div class="mt-6">
-        <div class="relative">
-          <div class="absolute inset-0 flex items-center">
-            <div class="w-full border-t border-gray-300"></div>
-          </div>
-          <div class="relative flex justify-center text-sm">
-            <span class="px-2 bg-white text-gray-500"> Or continue with </span>
-          </div>
-        </div>
-
-        <div class="mt-6 grid grid-cols-2 gap-3">
-          <div>
-            <a
-              href="#"
-              class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50"
-            >
-              <span class="sr-only">Sign in with Google</span>
-              <svg
-                class="w-5 h-5"
-                fill="currentColor"
-                viewBox="0 0 24 24"
-                aria-hidden="true"
-              >
-                <path
-                  d="M12.48 10.92v3.28h7.84c-.24 1.84-.853 3.187-1.787 4.133-1.147 1.147-2.933 2.4-6.053 2.4-4.827 0-8.6-3.893-8.6-8.72s3.773-8.72 8.6-8.72c2.6 0 4.507 1.027 5.907 2.347l2.307-2.307C18.747 1.44 16.133 0 12.48 0 5.867 0 .307 5.387.307 12s5.56 12 12.173 12c3.573 0 6.267-1.173 8.373-3.36 2.16-2.16 2.84-5.213 2.84-7.667 0-.76-.053-1.467-.173-2.053H12.48z"
-                ></path>
-              </svg>
-            </a>
-          </div>
-
-          <div>
-            <a
-              href="#"
-              class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50"
-            >
-              <span class="sr-only">Sign in with LinkedIn</span>
-              <svg
-                class="w-5 h-5"
-                fill="currentColor"
-                viewBox="0 0 20 20"
-                aria-hidden="true"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M16.338 16.338H13.67V12.16c0-.995-.017-2.277-1.387-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248H8.014v-8.59h2.559v1.174h.037c.356-.675 1.227-1.387 2.526-1.387 2.703 0 3.203 1.778 3.203 4.092v4.711zM5.005 6.575a1.548 1.548 0 11-.003-3.096 1.548 1.548 0 01.003 3.096zm-1.337 9.763H6.34v-8.59H3.667v8.59zM17.668 1H2.328C1.595 1 1 1.581 1 2.298v15.403C1 18.418 1.595 19 2.328 19h15.34c.734 0 1.332-.582 1.332-1.299V2.298C19 1.581 18.402 1 17.668 1z"
-                  clip-rule="evenodd"></path>
-              </svg>
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <p class="mt-8 text-center text-sm text-gray-600">
-        Not a member?
-        <a href="#" class="font-medium text-primary hover:text-primary-dark">
-          Sign up now
-        </a>
-      </p>
     </div>
   </div>
 </Layout>
