--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,12 +8,12 @@ import Experts from "../components/Experts.astro";
   <section
     class="container min-h-screen mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 pb-16 pt-20 text-center lg:pt-32"
   >
-    <div class="text-center">
+    <div class="text-center space-y-8 sm:space-y-12">
       <h1
-        class="pt-32 text-4xl sm:text-5xl md:text-6xl font-extrabold text-gray-900 mb-8"
+        class="pt-32 text-3xl sm:text-5xl md:text-6xl font-extrabold text-gray-900 mb-8"
       >
         <span
-          class="bg-clip-text text-transparent bg-gradient-to-r from-primary to-primary"
+          class="bg-clip-text text-transparent bg-gradient-to-r from-primary to-secondary"
         >
           Expert-Led Safeguarding for Organisational Success
         </span>
@@ -24,7 +24,7 @@ import Experts from "../components/Experts.astro";
         Committed to Protecting Vulnerable Individuals and Upholding Safety
         Standards in Every Organisation We Serve
       </p>
-      <div class="mt-10 flex-col flex md:flex-row justify-center gap-4">
+      <div class="sm:pt-12 flex-col flex md:flex-row justify-center gap-4">
         <a href="#" class="btn btn-primary btn-lg">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -67,7 +67,7 @@ import Experts from "../components/Experts.astro";
     class="w-full min-h-screen py-16 px-4 sm:px-6 lg:px-8 bg-secondary -mt-20"
   >
     <h2
-      class="text-2xl sm:text-6xl md:text-7xl font-black text-center text-white mb-12 pt-20"
+      class="text-2xl sm:text-6xl md:text-7xl font-black text-center text-white mb-16 pt-8"
     >
       Why Choose C&H Safeguarding?
     </h2>
