--- a/src/components/WhyChooseUsTabs.astro
+++ b/src/components/WhyChooseUsTabs.astro
@@ -75,7 +75,7 @@
         />
         <div
           id="dashboardOverlay"
-          class="min-h-40 md:absolute inset-x-0 bottom-0 flex items-center justify-center bg-primary bg-opacity-100 rounded-lg md:rounded-b-lg p-4"
+          class="min-h-40 md:absolute inset-x-0 bottom-0 flex items-center justify-center bg-primary bg-opacity-100 rounded-lg rounded-t-none md:rounded-b-lg p-4"
         >
           <p
             id="dashboardText"
