--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,14 +64,16 @@ import Experts from "../components/Experts.astro";
   </section>
   <section
     id="why-choose-us"
-    class="w-full min-h-screen py-16 px-4 sm:px-6 lg:px-8 bg-secondary -mt-20"
+    class="w-full py-24 px-4 sm:px-6 lg:px-8 bg-secondary -mt-20"
   >
     <h2
       class="text-2xl sm:text-6xl md:text-7xl font-black text-center text-white mb-16 pt-8"
     >
       Why Choose C&H Safeguarding?
     </h2>
-    <WhyChooseUsTabs />
+    <div class="sm:w-4/6 mx-auto">
+      <WhyChooseUsTabs />
+    </div>
   </section>
   <section id="what-we-offer" class="bg-gray-100 py-16">
     <div class="container mx-auto px-4">
@@ -209,7 +211,9 @@ import Experts from "../components/Experts.astro";
       <h2 class="text-5xl font-bold text-center text-primary-600 mb-12">
         Let Our Experts Guide You
       </h2>
-      <Experts />
+      <div class="w-5/6 mx-auto">
+        <Experts />
+      </div>
     </div>
   </section>
 
