--- a/src/components/Experts.astro
+++ b/src/components/Experts.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from "astro:assets";
 import experts from "../data/experts.json";
 ---
 
@@ -8,10 +9,12 @@ import experts from "../data/experts.json";
       experts.map((expert) => (
         <div class="card bg-base-100 shadow-xl relative overflow-hidden">
           <div class="card-body items-center text-center">
-            <img
+            <Image
               src={expert.image}
               alt={expert.name}
-              class="w-32 h-32 rounded-full mb-4"
+              width={128}
+              height={128}
+              class="w-32 h-32 rounded-full mb-4 object-cover grayscale"
             />
             <h3 class="text-xl font-semibold mb-0">{expert.name}</h3>
             <div class="flex flex-wrap justify-center gap-2 mb-3">
