Adding Georgia to the experts section.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ import Experts from "../components/Experts.astro";
             <path d="M8 11v.01"></path>
             <path d="M16 11v.01"></path>
           </svg>
-          Speak to an expert
+          Speak To An Expert
         </a>
         <a href="#" class="btn btn-lg">
           <svg
