--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -62,7 +62,7 @@
   >
     <div class="px-2 pt-2 pb-3 space-y-1">
       <a
-        href="#"
+        href="/"
         class="block px-3 py-2 border-l-4 border-secondary rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
         >Home</a
       >
