Adding Georgia to the experts section.

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -84,9 +84,7 @@
         >Our Experts</a
       >
       <div class="px-3 py-2">
-        <a href="/client-login" class="btn btn-outline w-full">
-          Client Login
-        </a>
+        <a href="/login" class="btn btn-outline w-full"> Client Login </a>
       </div>
     </div>
   </div>
