Adding Georgia to the experts section.

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -28,7 +28,7 @@
       <div
         class="flex flex-row gap-2 justify-center items-center md:justify-start flex-grow md:flex-grow-0"
       >
-        <a href="/">
+        <a href="/" class="flex flex-row gap-2 justify-center items-center">
           <img src="/images/chlogo.png" alt="Company Logo" class="h-12" />
           <span class="text-xl font-bold">C&H Safeguarding</span>
         </a>
