Adding Georgia to the experts section.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -211,7 +211,7 @@ import Experts from "../components/Experts.astro";
       <h2 class="text-5xl font-bold text-center text-primary-600 mb-12">
         Let Our Experts Guide You
       </h2>
-      <div class="w-5/6 mx-auto">
+      <div class="sm:w-5/6 mx-auto">
         <Experts />
       </div>
     </div>
